@@ -211,8 +211,15 @@ void req_modifyjob(
 
   /* if job is running, special checks must be made */
 
+  /* NOTE:  must determine if job exists down at MOM - this will occur if
+            job is running, job is held and checkpointed */
+
+#ifdef ENABLE_BLCR
   if (pjob->ji_qs.ji_state == JOB_STATE_RUNNING ||
-      pjob->ji_qs.ji_state == JOB_STATE_HELD) 
+     pjob->ji_qs.ji_state == JOB_STATE_HELD)
+#else
+  if (pjob->ji_qs.ji_state == JOB_STATE_RUNNING)
+#endif
     {
     while (plist != NULL) 
       {
